objects/Account_Adddress__c/Account_Adddress__c.object-meta.xml
<CustomObject>
    <label>Additional Account Adddress</label>
    <nameField>
        <label>Account Adddress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Account Adddress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>