objects/Account_Adddress__c/fields/Billing_Address_same_as_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_same_as_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Both Address are same</label>
    <type>Checkbox</type>
</CustomField>