objects/Account_Adddress__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <label>Billing Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>