objects/Account_Adddress__c/fields/IsAddressFromCustomUI__c.field-meta.xml
<CustomField>
    <fullName>IsAddressFromCustomUI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAddressFromCustomUI</label>
    <type>Checkbox</type>
</CustomField>