objects/Account_Adddress__c/validationRules/Create_Record_Not_Allowed_Standard.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Record_Not_Allowed_Standard</fullName>
    <active>false</active>
    <description>Create new account address is not allowed from Standard new button.</description>
    <errorConditionFormula>IF(AND(ISNEW(),NOT(IsAddressFromCustomUI__c)),true,false)</errorConditionFormula>
    <errorMessage>Please use &apos;New&apos; account address button from account related list to add new address.</errorMessage>
</ValidationRule>